experiments/en-it/unlabeled/slurm-1665680.out
--------------------------------------------------------------------------------
ENGLISH-ITALIAN
--------------------------------------------------------------------------------
NUMERAL DICTIONARY
Traceback (most recent call last):
  File "/scratch/priley3/artexte/vecmap/map_embeddings.py", line 24, in <module>
    import ortho
  File "/gpfs/fs2/scratch/priley3/artexte/vecmap/ortho.py", line 151
    if __name__ == "__main__":
     ^
IndentationError: expected an indented block
  - Orthographic (1gram)         |  Translation:  0.13%  MWS353:  5.22%

